# Copyright 2009-2014 Andrey Ovcharov <sudormrfhalt@gmail.com>
# Distributed under the terms of the GNU General Public License v2
# $Header: $

*Rename geek-<some name>.eclass --> <some name>.eclass (11 Apr 2014)
  11 Apr 2014; Andrey Ovcharov (init_6) <sudormrfhalt@gmail.com>
  Rename geek-<some name>.eclass --> <some name>.eclass
  Split openelec from fixes to openelec.eclass and USE="openelec"
  Fork and fix versionator.eclass from gentoo. Add eclass/tests/versionator:version_compare.sh
  Add scripts/eclass-dep.sh

*geek-rh.eclass (26 Feb 2014)

  26 Feb 2014; Andrey Ovcharov (init_6) <sudormrfhalt@gmail.com>
  Fix geek-rh.eclass and geek-sources.eclass
  +geek-uek.eclass
  From now sys-kernel/geek-sources can be built based on vanilla-sources or Red-Hat Enterprise Linux kernel sources or Oracle’s Unbreakable Enterprise Linux Kernel sources

*geek-openvz.eclass (07 Dec 2013)

  07 Dec 2013; Andrey Ovcharov (init_6) <sudormrfhalt@gmail.com>
  +geek-openvz.eclass
  Add openvz kernel with OpenVZ patchset
  -geek-ubuntu.eclass
  -geek-xenomai.eclass

*geek-rh.eclass (27 Oct 2013)

  27 Oct 2013; Andrey Ovcharov (init_6) <sudormrfhalt@gmail.com>
  +geek-rh.eclass
  Add rh (Red Hat Enterprise Linux kernel patches) support to geek-sources-2.6.32.61

*geek-sources-2.6 (13 Oct 2013)

  13 Oct 2013; Andrey Ovcharov (init_6) <sudormrfhalt@gmail.com>
  Add 2.6.32.61, 2.6.34.14, 3.0.99 kernel support to geek-sources

*geek-sources-3.11.1 (15 Sep 2013)

  15 Sep 2013; Andrey Ovcharov (init_6) <sudormrfhalt@gmail.com>
  Bump sys-kernel/geek-sources-{3.2.50,3.4.61,3.10.11,3.11} -> sys-kernel/geek-sources-{3.2.51,3.4.62,3.10.12,3.11.1}

*geek-sources-3.10.7 (19 Aug 2013)

  19 Aug 2013; Andrey Ovcharov (init_6) <sudormrfhalt@gmail.com>
  +geek-sources-3.10.7.ebuild
  +geek-cjktty.eclass +geek-optimization.eclass

*geek-sources-3.10.6 (12 Aug 2013)

  12 Aug 2013; Andrey Ovcharov (init_6) <sudormrfhalt@gmail.com>
  +geek-sources-3.10.6.ebuild
  -linux-geek.eclass