@@ -2,6 +2,6 @@
 # live 9999 ebuild`s
 =sys-kernel/vanilla-sources-9999
 
-# Andrey Ovcharov <sudormrfhalt@gmail.com>
-# Kernel mainline 2014-04-13
->=sys-kernel/geek-sources-4.1
+# Sven Eden <yamakuzure@gmx.net>
+# Kernel mainline 2015-07-01
+>=sys-kernel/geek-sources-4.2
