@@ -59,6 +59,7 @@ DIST patch-3.4-ck3.lrz 49607 SHA256 6313aff3461148ef187a4e11f6ebc999acee948fb783
 DIST patch-3.4.107.xz 1216492 SHA256 1c8c5cea7f0811064e33fd034ee35c399e376f2f0bcac37502f62e1f3a686f40 SHA512 fdc3aa1023bce84c2bb8741d7ee32d9262175d8ade2b26cc8e3f06d9d04580feb8d7f62e993dd9804c4e3eb05667f7b1397a8082ee605096e20b37ada90f7fde WHIRLPOOL 6224b2c21108b754991b11060d79a96c9afe2b5a35f94bf225b25d03f2dce39882bbd6371f752b6fbb3b8613487bd1a5832711be63a5207a00764274ea213ff5
 DIST patch-4.0-ck1.lrz 50778 SHA256 cac0a3a588d965bc448800fab2a59e8cc341efb1050110cd6ccdeb3aee9ece16 SHA512 fdab282c5bf7d97b68b1a175f1585c3912dcca11d955b70747e07c946a4eaf5d4da5f3bdb7132245576448e0d368a918ee68ae10b82f39f6255101e4177b4826 WHIRLPOOL 140e77539533a79a0a31e7c2921af2681af3e43b137bec02c160857c4ec588cb73ae8382ce77e4e1ae7343a50b920be39c6bfd7017d4feebc1f1213c6a06f433
 DIST patch-4.0.7.xz 186264 SHA256 c6deb2cda4d87fc2e09442e31f3e6e70e54962744c3a4d2653a8fda381442de0 SHA512 94c9ae61d665bdb06b2558b4e473777c13cb77e00c4b6cab326d10372f64bb8a9550f8bc2e2d3e1bf2a4ddf2adf1f3546a93e727aeb6b8792057017276dd9683 WHIRLPOOL cf53e324283f59111e368b740e78fd1ecbc5aec06d71b6abce6f5bfb9c9ab3ceb671fa93452250819f92627dc4d3d23f1eb32d36788135ff158f70da0c11a426
+DIST patch-4.1.1.xz 3828 SHA256 48a813fb6795153f6906759501bea9e290db528894d1c0726667efc8e55dd7ad SHA512 2ea80302c413193e8d39ff736f6ac2eefc70e1394cfef1bfd7b672ff30b6c2d17191e62a2a0126c5363b419c86a23e28d46ffc61e512c5640b61519c50c7a16a WHIRLPOOL 819b9a05bdbce15fd319dafc46fae9fcd833470ea4166d07b46f2d57e92500598deb1af471a5ef2b2c68c213698dbdfda352704715021d53eb1d2a58226d9ab9
 DIST patch-linux-3.10.7-rsbac-1.4.7.diff.xz 382900 SHA256 57b283ac21ed14b61d4ccc672d3317f10abc4f1ac8e80ee3f6269d00e51ea1d2 SHA512 37ff26f5cef201c46cd8b585cf2c8cc7a1f4f3bc7d8eb7e112bdeecf10483325517921323917f76d63209b43707dde514e7a263f85328fd2ead0a1af7fd3e746 WHIRLPOOL 7038853c1503d521df51acc64ea295e683a12e970db6444ec765d3578ab881da7a9188aa1c54811065260ca230b8432d0aac7cac2621e838fe13ed3a355e1a96
 DIST patch-linux-3.2.50-rsbac-1.4.7.diff.xz 386688 SHA256 903c6a7e045bc77b8f78e826277d5bd86cca426c49f1eacc9143bc420a4e03cc SHA512 4c75b0e63abe1618e20fc4862c6fe865080018fd83e48df34d84680517d39adb13c3bce9a9a866ba144ef67f84a235b3cc93fb8532ab58e64213faeb328d13c0 WHIRLPOOL 422558f6335eda5d1719a2eddf48fa7b6617e66a1fc1134893e18b2951783e477fae6da878ac7013c95e5b1420070931aa1cb86df9ee1c6660ad0f824e7d8f61
 DIST pax-linux-3.10.12-test26.patch 3142227 SHA256 c8091db298676ff487397a6b347670351b988ce7665fdd22fac85467926f51af SHA512 4e8f3f523197a7dfa4081f0658af2d75d8197d5856a316c519dd400bc226e4e5945e8101dda94def95cb56bf7f6a99793812bd4f45307bb50639b70d6943462f WHIRLPOOL 9a52c7412a2fd61b2536bbd3db9f723d677a4e90a17afc106bb7edd236d8647570680b10125acba56473702aac8544e9e371b777442ed5e4e572c3826d74dbeb
@@ -83,6 +84,7 @@ DIST tuxonice-for-linux-3.18.7-2015-02-14.patch.bz2 127694 SHA256 fb94b85c3b4e3f
 DIST tuxonice-for-linux-3.2.62-2014-08-07.patch.bz2 133109 SHA256 0e6de2155792aafd740cb1634cf1fa89a9dbd69c49edf28c13f6b887ee818135 SHA512 de48534b7d777c260ffd180879ad003566cfc3dfa24e45bb27213680a254005f0d2a77cf154edbc01efbdd390407b2f03224e1afe5c41385883ca1ca6b631e26 WHIRLPOOL aefb94831851712cc7587e28696db7bff8330e626397df7caafd3bdfd8b5eaec3b80d0beb6733e529ad414d59ef0d342c7d30ec26328156203d5b28eb9801e69
 DIST tuxonice-for-linux-3.4.106-2015-02-10.patch.bz2 131321 SHA256 93998a24b0b4645cfa87272446d5cdbf8f8050fa4c4e74cd23d9188394a32acf SHA512 3c15ece9366eaea749cf0cea156b021b7bcbd69803f4fb76ebbb72f00be4bd36949a91bc5f459628cb80e34485a0a0d2918d9e053b97b95ec0ac9a21ac796567 WHIRLPOOL a3e4fdfa923a8208eae6bd4acce26dd63a2b3a9339595e330f8c71a7ea61bce8da1e2d0957056f7109b8c1a3bed4f6fee73f7e02b7ba245017529a2fd5db0a65
 DIST tuxonice-for-linux-head-3.19.0-2015-02-10.patch.bz2 130927 SHA256 9105e11eff55be56714f8b55703b9efe51ea2cab813cca714e264020014a42c1 SHA512 9671531338c2a6c2e5c012ead813ce2c4e07bae522ecb57a510576cc9269d3806333a6e6b08c0665b3031c827767233442b299ddb66792c55ddc253b56e182e4 WHIRLPOOL 4ef8e63ad92d1f970c647a07564a3d308915a93dccdf08ac40a8024194b1ac9f37481219fc802526e4b779f0265a378355c5b97c09dee5f338d58eb8a03360d6
+DIST tuxonice-for-linux-head-4.1.0-rc8-2015-06-17.patch.bz2 133750 SHA256 5b2438090b74dbeccf5592e387eb39b77aa688cf029c37db7fedc316cfd95588 SHA512 3ddb1d41490196caf2afd00fdee749f5927f4e06ddd07086a817aeadacdf0692ca7aa2971a57fb37cdb99fe17a4702330782e2f857c07e6321abcd1209bdf886 WHIRLPOOL 1536b72b3d1454caac573721d3ef2811a4c4d8eba658b74d52e1adacc0886d75fb626673ff3453fa6417638372d37792922d42f21f70dd39f7e935a801dfdbf6
 DIST uksm-0.1.2.3-for-v3.10.ge.46.patch 181600 SHA256 c47320907b6a8209bb88017057576eda63595bfde2038875bbc15579de1c168d SHA512 d3a2162cc7aad4d13cc922b59f11cadf2513093bb96bde531ffb98fd9cd5ae46d64eba29f505a9c6453c18b7a50b63cabaa1c1b1459fb201dbe424dbcb453ed2 WHIRLPOOL 5547440d648f1cf10ac5461a9b6e4353a0acb4214bf214bece535de0859d09b434508afd582be6ba5f1bbb071710742972a4641ee43d79bbd255f1bbfe3e9769
 DIST uksm-0.1.2.3-for-v3.12.ge.23.patch 181565 SHA256 86195ff8a0e95bfdaedf439cbe9e4945e8589904c2f12fcbbdd6466ca9a22752 SHA512 53c26dd0abb6f206b2920ad18ccf2e2f0710ad570111f8601a38ddf5193e47c02ca0c895142a65fecf156dfc0a37112e0bfb0ae27f6f36efd9b1947bafe2c957 WHIRLPOOL 2fb2449d38824d46fc3795206d8cfc467f6a60e6340deb5be4aee705f40815251c6fb11ce64e2ffefc2b6c016125dfa5509c3515d1576c0ea65c7b361a2bcec6
 DIST uksm-0.1.2.3-for-v3.14.ge.10.patch 178122 SHA256 35fe816b2518898fcf36024e821c7f8c56f0141cfe0ac5088ad06a67f17450ce SHA512 afcc5b9da7b13cd04c85112d01576811ed817bcf7fb13c0a5628579102b78b6f495a193717411a115975bb53b41358d284742feb0e6f6dddea70e0351ffb7515 WHIRLPOOL b464cd36590591d87fa6a586ff827587addfa4d69ad536be017bf94f5092b1c8a575ccf51143b906ba0b1ee1a1067e105934cb9501b4133ff6ff7a1e8fd796a9
